home floating button and contact page done

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="top-bottom-margin">
             <div class="hide-text-block">
-                <h2>I design & build digital products</h2>
+                <h2>I design & build <span style="color: #55efc4;">digital</span> products</h2>
             </div>
             <div class="hero-image">
                 <img src="https://www.dejan.works/img/Dejan.png">
@@ -17,8 +17,8 @@
             <div class="about-text">
                 <h4>About</h4>
                 <p class="subhead">
-                    Hi, I’m Dejan. I'm a multi-talented human with over 10+ years of experiences in wide
-                    range of design disciplines.
+                    Hi, I’m Iftikhar. I'm a multi-talented human with over 4+ years of experiences in wide range of
+                    design and development disciplines.
                 </p>
                 <p>
                     You can also call me a product designer, experience designer, interaction, UI, UX or by any other
@@ -27,7 +27,8 @@
                     enthusiast, traveler, photographer and more.
                 </p>
                 <p>
-                    I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills
+                    I don’t like to define myself by the work I’ve done. I define myself by the work I want to do.
+                    Skills
                     can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and
                     do interesting things that matter.
                 </p>
@@ -44,7 +45,8 @@
                 </p>
                 <p>
                     I like to develop expertise in a number of areas over the course of my life and career. My
-                    personality type is <a href="http://www.personalitypage.com/ENTJ.html" target="_blank"> ENTJ</a>. I currently work
+                    personality type is <a href="http://www.personalitypage.com/ENTJ.html" target="_blank"> ENTJ</a>. I
+                    currently work
                     remotely with a selected freelance client base and are open for new opportunities.
                 </p>
                 <p>
@@ -52,7 +54,8 @@
                     attached bellow:
                 </p>
                 <div class="links" data-aos="fade-up">
-                    <a href="https://www.dejan.works/files/Dejan_Markovic_CV.pdf" target="_blank">My resume (pdf 109kb) </a>
+                    <a href="https://www.dejan.works/files/Dejan_Markovic_CV.pdf" target="_blank">My resume (pdf 109kb)
+                    </a>
                 </div>
             </div>
         </div>
