--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,49 @@
-<p>contact works!</p>
+<div class="block-image-overflow">
+    <div class="max-width">
+        <div class="logo">
+            <div class="logo-inner" id="logo">
+                <a [routerLink]="['/home']">
+                    <div class="logo-text"></div>
+                </a>
+            </div>
+        </div>
+        <div class="top-bottom-margin">
+            <div class="hide-text-block">
+                <h2>Let's make <span style="color: #55efc4;">something</span> great</h2>
+            </div>
+            <div class="about-text">
+                <h4>Contact</h4>
+                <p class="subhead">
+                    Hi, I’m Iftikhar. I'm a multi-talented human with over 4+ years of experiences in wide
+                    range of design and development disciplines.
+                </p>
+                <p>
+                    I'm seeking out opportunities to collaborate with companies / agencies / individuals, not just work
+                    for them. I want to bring my collective design experience to the table where we can work together to
+                    solve real business-problems in a way that optimizes all of our respective experience and knowledge.
+                </p>
+                <p>
+                    I want to avoid subjective pissing-matches, and favor open-minded collaborators where egos are out
+                    of the equation. If that all sounds about right, then lets for sure chat about how we can work
+                    together.
+                </p>
+                <p>
+                    Feel free to reach out through any platforms bellow:
+                </p>
+                <div class="links" data-aos="fade-up">
+                    <a href="mailto:iftikharyk@gmail.com" target="_blank"><i class="fas fa-envelope-square"></i> Email
+                        Me</a>
+                    <a href="https://www.linkedin.com/in/iftikhar-yar-khan/" target="_blank"><i
+                            class="fab fa-linkedin"></i>
+                        Linkedin</a>
+                    <a href="https://github.com/iftikharyk" target="_blank"><i class="fab fa-github-square"></i>
+                        Github</a>
+                    <a href="https://stackoverflow.com/users/9103067/iftikharyk" target="_blank"><i
+                            class="fab fa-stack-overflow"></i>
+                        Stackoverflow</a>
+                    <a href="https://codepen.io/iftikharyk/" target="_blank"><i class="fab fa-codepen"></i> Codepen</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
