--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -42,10 +42,12 @@
 
                         &.label-iam::after {
                             content: "Work";
+                            color: #55efc4;
                         }
 
                         &.label-name::after {
                             content: "Contact";
+                            color: #55efc4;
                         }
                     }
 
@@ -55,10 +57,12 @@
 
                     &.label-iam::after {
                         content: "I am";
+                        color: #55efc4;
                     }
 
                     &.label-name::after {
                         content: "Iftikhar";
+                        color: #55efc4;
                     }
                 }
 
@@ -80,6 +84,10 @@
             h1 {
                 .text-after {
                     display: none;
+
+                    &.different {
+                        color: #55efc4;
+                    }
                 }
             }
         }
@@ -207,3 +215,131 @@
         transform: translateY(-8px);
     }
 }
+
+
+.circular-menu {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+  
+    .floating-btn {
+      display: block;
+      width: 3.5em;
+      height: 3.5em;
+      border-radius: 50%;
+      background-color: #55efc4;
+      box-shadow: 0 2px 5px 0 hsla(0, 0%, 0%, 0.26);
+      color: hsl(0, 0%, 100%);
+      text-align: center;
+      line-height: 3.9;
+      cursor: pointer;
+      outline: 0;
+    }
+  
+    &.active .floating-btn {
+      box-shadow: inset 0 0 3px hsla(0, 0%, 0%, 0.3);
+    }
+  
+    .floating-btn {
+      &:active {
+        box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, 0.4);
+      }
+  
+      i {
+        font-size: 1.3em;
+        transition: transform .2s;
+
+        &.openmenu {
+            display: initial;
+        }
+
+        &.closemenu {
+            display: none;
+        }
+      }
+    }
+  
+    &.active .floating-btn {
+        i {
+            &.openmenu {
+                display: none;
+            }
+
+            &.closemenu {
+                display: initial;
+            }
+        }
+      
+    }
+  
+    &:after {
+      display: block;
+      content: ' ';
+      width: 3.5em;
+      height: 3.5em;
+      border-radius: 50%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: -2;
+    //   background-color: #55efc4;
+      background-color: #10ac84;
+      transition: all .3s ease;
+    }
+  
+    &.active:after {
+      transform: scale3d(5.5, 5.5, 1);
+      transition-timing-function: cubic-bezier(0.68, 1.55, 0.265, 1);
+    }
+  
+    .items-wrapper {
+      padding: 0;
+      margin: 0;
+    }
+  
+    .menu-item {
+      position: absolute;
+      top: .2em;
+      right: .2em;
+      z-index: -1;
+      display: block;
+      text-decoration: none;
+      color: hsl(0, 0%, 100%);
+      font-size: 1em;
+      width: 3em;
+      height: 3em;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 3;
+      background-color: hsla(0, 0%, 0%, 0.1);
+      transition: transform .3s ease, background .2s ease;
+  
+      &:hover {
+        background-color: hsla(0, 0%, 0%, 0.3);
+      }
+    }
+  
+    &.active .menu-item {
+      transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  
+      &:nth-child(1) {
+        transform: translate3d(1em, -7em, 0);
+      }
+  
+      &:nth-child(2) {
+        transform: translate3d(-2.5em, -6.6em, 0);
+      }
+  
+      &:nth-child(3) {
+        transform: translate3d(-5.5em, -5.1em, 0);
+      }
+  
+      &:nth-child(4) {
+        transform: translate3d(-7.3em, -2.2em, 0);
+      }
+
+      &:nth-child(5) {
+        transform: translate3d(-7.4em, 1.1em, 0);
+      }
+    }
+  }
