--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,8 +16,9 @@ body {
 }
 
 ::selection {
-    color: rgba(255,255,255,.99);
-    background: rgba(0,0,0,.99);
+    // color: rgba(255,255,255,.99);
+    color: #000117;
+    background: #55efc4;
 }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
