--- a/src/app/pages/work/work.component.scss
+++ b/src/app/pages/work/work.component.scss
@@ -50,7 +50,7 @@
         }
 
         .top-bottom-margin {
-            margin: 35vh 0 30vh 0;
+            margin: 35vh 0 50vh 0;
 
             .hide-text-block {
                 position: relative;
@@ -67,74 +67,65 @@
                 }
             }
 
-            .hero-image {
-                width: 100vw;
-                height: 90vh;
-                overflow: hidden;
-                margin: 30vh 0;
-                animation-delay: .2s;
-                animation: animate .6s cubic-bezier(0.2, 0.6, 0.2, 1);
-                animation-fill-mode: backwards;
+            .work-block {
+                position: relative;
 
-                img {
-                    width: 100%;
-                    height: 100vh;
-                    object-fit: cover;
-                    max-width: 100%;
-                    max-height: 100%;
-                    pointer-events: none;
-                }
-            }
+                a {
+                    text-decoration: none;
+                    cursor: pointer;
+                    color: #000000;
 
-            .about-text {
-                max-width: 70%;
-                margin: 0 auto;
-                color: #ffffff;
-
-                h4 {
-                    margin: 24vh 0 4vh 0;
-                    font-size: 40px;
-                    line-height: 140%;
-                    font-weight: bold;
-                }
-
-                p.subhead {
-                    line-height: 160%;
-                    font-size: 24px;
-                    margin-bottom: 4vh;
-                    font-weight: 500;
-                }
-
-                p {
-                    line-height: 170%;
-                    font-size: 18px;
-                    margin-bottom: 3vh;
-                    font-weight: normal;
-
-                    a, a:visited {
-                        color: #ffffff;
-                        text-decoration: underline;
+                    &:hover {
+                        .work-image {
+                            display: block;
+                        }
                     }
-                }
 
-                .links {
-                    a, a:visited {
+                    .work-inner {
+                        margin: 12vh 0;
+                        transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1);
+                        position: relative;
                         display: block;
-                        margin: 4vh 0;
-                        font-size: 19px;
-                        text-decoration: none;
-                        color: #55efc4;
-                        transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1);
-                        text-decoration: none;
-                        cursor: pointer;
+                        overflow: hidden;
+                        padding: 0px 30px;
+
+                        &:hover {
+                            margin-left: 20px;
+                            transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1)
+                        }
+
+                        h4 {
+                            color: #ffffff;
+                            font-weight: 500;
+                            font-size: 2.222em;
+                            margin-bottom: 10px;
+                        }
+
+                        p {
+                            font-size: 16px;
+                            font-weight: normal;
+                            color: #55efc4;
+                        }
                     }
 
-                    a:hover {
-                        margin-left: 40px;
-                        transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1);
+                    .work-image {
+                        position: absolute;
+                        width: 70%;
+                        right: 0;
+                        top: 0;
+                        display: none;
+                        // transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1);
+                        animation-delay: .2s;
+                        animation: animate .6s cubic-bezier(0.2, 0.6, 0.2, 1);
+                        animation-fill-mode: backwards;
+
+                        img {
+                            width: 100%;
+                        }
                     }
                 }
             }
+
         }
     }
 }
@@ -158,21 +149,6 @@
                     }
                 }
 
-                .hero-image {
-                    margin: 20vh 0;
-
-                    img {
-                        background-position: right bottom;
-                    }
-                }
-
-                .about-text {
-                    max-width: 100%;
-
-                    h4 {
-                        font-size: 30px;
-                    }
-                }
             }
         }
     }
